--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ footer {
     "GROEN!":12,//15,//12,
     "VB":8,//8,//10,
     "DéFI":1,//3,//3,
-    "PTB-PVDA":12,//8,//5
+    "PTB":12,//8,//5
     "PP":0//2//0
    },
    sena : {
@@ -782,7 +782,7 @@ footer {
     "GROEN!":3,
     "VB":2,
     "DéFI":0,
-    "PTB-PVDA":0,
+    "PTB":0,
     "PP":0
    },
    dePart : "MR", // le parti du sénateur germanophone (siège à décompter pour atteindre la majorité francophone)
@@ -837,7 +837,7 @@ progrInit : {
       insti:false,
       lingequi:false
     },
-    "PTB-PVDA":{
+    "PTB":{
       require:[],
       reject:["VB", "N-VA", "MR", "Open Vld", "PP"],
       consti:false,
@@ -947,7 +947,7 @@ progrInit : {
     "PSC":"FR",
     "VU":"NL",
     "PTB-GO !":"FR",
-    "PTB-PVDA":"FR"
+    "PTB":"FR"
   };
   var color = {
     "CD&V N-VA":"#F89734",
@@ -975,7 +975,7 @@ progrInit : {
     "PSC":"#FF5400",
     "VU":"#FCB340",
 	"PTB-GO !":"#B30000",
-	"PTB-PVDA":"#B30000"
+	"PTB":"#B30000"
   };
   
   var famille = {
