--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ footer {
 }
 </style>
 <link rel="stylesheet" href="tabber.css" TYPE="text/css" MEDIA="screen">
-<script src="https://code.jquery.com/jquery-1.5.1.min.js"></script>
+<script src="jquery-1.5.1.min.js"></script>
 <script type="text/javascript" src="tabber-minimized.js"></script>
 <script>
   
