--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -51,7 +51,7 @@ footer {
 }
 </style>
 <link rel="stylesheet" href="tabber.css" TYPE="text/css" MEDIA="screen">
-<script src="http://code.jquery.com/jquery-1.5.1.min.js"></script>
+<script src="jquery-1.5.1.min.js"></script>
 <script type="text/javascript" src="tabber-minimized.js"></script>
 <script>
   
