--- a/gouv/gouvWA.html
+++ b/gouv/gouvWA.html
@@ -537,8 +537,8 @@ footer {
    critWinners : false,
    critLosers : false,
    critBigFish : false,
-   critFamilies : true,
-   critBigFamily : true,
+   critFamilies : false,
+   critBigFamily : false,
    critInsti : false,
    hideRedun : true
   };
