--- a/gouv/gouvWA.html
+++ b/gouv/gouvWA.html
@@ -491,6 +491,63 @@ footer {
    hideRedun : true
   };
 
+  // 2014
+  var leg2014 = {
+   parl : {
+    "PS":30,
+    "MR":25,
+    "CDh":13,
+    "ecolo":4,
+    "ecolo":4,
+    "PTB":2,
+    "PP":1
+   },
+   gagnants : { // progressions
+     "MR": true
+   },
+   perdants : { // régressions
+     "PS": true,
+	 "ecolo": true
+   },
+   progrInit : {
+    "PS":{
+      require:[],
+      reject:[]
+    },
+    "MR":{
+      require:[],
+      reject:[]
+    },
+    "CDh":{
+      require:[],
+      reject:[]
+    },
+    "ecolo":{
+      require:[],
+      reject:[]
+    },
+    "PTB":{
+      require:[],
+      reject:[]
+    },
+    "PP":{
+      require:[],
+      reject:[]
+    }
+   },
+   specCoa : {
+   },
+   critCordon : true,
+   critWinners : false,
+   critLosers : false,
+   critBigFish : false,
+   critFamilies : false,
+   critBigFamily : false,
+   critInsti : false,
+   hideRedun : true
+  };
+  
+  
   // 2019
   var leg2019 = {
    parl : {
@@ -1745,7 +1802,8 @@ footer {
 <!--input class="btLeg" id="leg1999" type="button" value="1999" onclick="loadTab(leg1999);$('#leg1999').css('background-color','lightblue');"/>
 <input class="btLeg" id="leg2003" type="button" value="2003" onclick="loadTab(leg2003);$('#leg2003').css('background-color','lightblue');"/>
 <input class="btLeg" id="leg2007" type="button" value="2007" onclick="loadTab(leg2007);$('#leg2007').css('background-color','lightblue');"/-->
-<input class="btLeg" id="leg2009" type="button" value="2009" onclick="loadTab(leg2009);$('#leg2009').css('background-color','lightblue');" style="background-color:lightblue"/>
+<input class="btLeg" id="leg2009" type="button" value="2009" onclick="loadTab(leg2009);$('#leg2009').css('background-color','lightblue');"/>
+<input class="btLeg" id="leg2014" type="button" value="2014" onclick="loadTab(leg2014);$('#leg2014').css('background-color','lightblue');" style="background-color:lightblue"/>
 <input class="btLeg" id="leg2019" type="button" value="2019?" onclick="loadTab(leg2019);$('#leg2019').css('background-color','lightblue');" />
 
 <div class="tabber" id="tabber">
@@ -1807,8 +1865,8 @@ footer {
   
   <br><br><footer><a href="mailto:leunen.d@gmail.com">contact</a><br/>Merci à Vincent de Coorebyter pour ses précieux conseils</footer>
 <script>
-  loadTab(leg2009);
-  document.getElementById("leg2009").setAttribute("style", "background-color:lightblue");
+  loadTab(leg2014);
+  document.getElementById("leg2014").setAttribute("style", "background-color:lightblue");
 </script>
 </body>
 </html>
