--- a/gouv/gouvVL.html
+++ b/gouv/gouvVL.html
@@ -58,14 +58,14 @@ footer {
   // 2019
   var leg2019 = {
    parl : {
-    "GROEN!":16,
-    "VB":10,
-    "Open Vld":17,
-    "sp.a":15,
-    "N-VA":36,
-    "CD&V":18,
     "PVDA":5,
-    "UF":1
+    "GROEN!":16,
+    "sp.a":15,
+    "CD&V":18,
+    "Open Vld":17,
+    "N-VA":36,
+    "UF":1,
+    "VB":10
    },
    gagnants : { // progressions
     "GROEN!":true
@@ -219,6 +219,7 @@ footer {
     "rouge romaine":{"socialistes":true,"centristes":true},
     "violette":     {"socialistes":true,"libéraux":true},
     "truquoise":    {"libéraux":true   ,"verts":true},
+	"centre droit": {"libéraux":true   ,"centristes":true, "N-VA":true},
     "orange bleue": {"libéraux":true   ,"centristes":true},
 	
 	"bourguignonne": {"N-VA":true, "Open Vld":true, "sp.a":true}
