--- a/gouv/gouvWA.html
+++ b/gouv/gouvWA.html
@@ -494,12 +494,11 @@ footer {
   // 2014
   var leg2014 = {
    parl : {
-    "PS":30,
-    "MR":25,
-    "CDh":13,
-    "ecolo":4,
-    "ecolo":4,
     "PTB":2,
+    "ecolo":4,
+    "PS":30,
+    "CDh":13,
+    "MR":25,
     "PP":1
    },
    gagnants : { // progressions
@@ -551,11 +550,11 @@ footer {
   // 2019
   var leg2019 = {
    parl : {
-    "PS":20,
-    "MR":16,
+    "PTB":12,
     "ecolo":20,
+    "PS":20,
     "CDh":7,
-    "PTB":12
+    "MR":16
    },
    gagnants : { // progressions
     "ecolo":true,
