--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ footer {
 progrInit : {
     "N-VA":{
       require:[],
-      reject:["VB"],
+      reject:["VB","PS","ecolo"],
       consti:true,
       insti:false,
       lingequi:false
