--- a/gouv/gouvWA.html
+++ b/gouv/gouvWA.html
@@ -550,11 +550,11 @@ footer {
   // 2019
   var leg2019 = {
    parl : {
-    "PTB":12,
-    "ecolo":20,
-    "PS":20,
-    "CDh":7,
-    "MR":16
+    "PTB":10,
+    "ecolo":12,
+    "PS":23,
+    "CDh":10,
+    "MR":20
    },
    gagnants : { // progressions
     "ecolo":true,
@@ -1802,8 +1802,8 @@ footer {
 <input class="btLeg" id="leg2003" type="button" value="2003" onclick="loadTab(leg2003);$('#leg2003').css('background-color','lightblue');"/>
 <input class="btLeg" id="leg2007" type="button" value="2007" onclick="loadTab(leg2007);$('#leg2007').css('background-color','lightblue');"/-->
 <input class="btLeg" id="leg2009" type="button" value="2009" onclick="loadTab(leg2009);$('#leg2009').css('background-color','lightblue');"/>
-<input class="btLeg" id="leg2014" type="button" value="2014" onclick="loadTab(leg2014);$('#leg2014').css('background-color','lightblue');" style="background-color:lightblue"/>
-<input class="btLeg" id="leg2019" type="button" value="2019?" onclick="loadTab(leg2019);$('#leg2019').css('background-color','lightblue');" />
+<input class="btLeg" id="leg2014" type="button" value="2014" onclick="loadTab(leg2014);$('#leg2014').css('background-color','lightblue');"/>
+<input class="btLeg" id="leg2019" type="button" value="2019" onclick="loadTab(leg2019);$('#leg2019').css('background-color','lightblue');" style="background-color:lightblue"/>
 
 <div class="tabber" id="tabber">
 
@@ -1864,8 +1864,8 @@ footer {
   
   <br><br><footer><a href="mailto:leunen.d@gmail.com">contact</a><br/>Merci à Vincent de Coorebyter pour ses précieux conseils</footer>
 <script>
-  loadTab(leg2014);
-  document.getElementById("leg2014").setAttribute("style", "background-color:lightblue");
+  loadTab(leg2019);
+  document.getElementById("leg2019").setAttribute("style", "background-color:lightblue");
 </script>
 </body>
 </html>
