--- a/index.html
+++ b/index.html
@@ -756,23 +756,22 @@ footer {
    actualRefoGouv : {"Open Vld":true, "CD&V":true, "sp.a":true, "MR":true, "PS":true, "CDh":true, "ecolo":true, "GROEN!":true}
   };
 
-  // 2019?
+  // 2019
   var leg2019 = {
    chamb : {
-    "PTB":9,//8,//5
-    "PVDA":3,//8,//5
-    "ecolo":16,//14,//11,
-    "GROEN!":12,//15,//12,
-    "PS":20,//18,//19,
-    "sp.a":11,//9,//9,
-    "CDh":4,//5,//8,
-    "CD&V":14,//14,//19,
-    "DéFI":1,//3,//3,
-    "MR":13,//14,//17,
-    "Open Vld":12,//12,//14,
-    "N-VA":27,//28,//23,
-    "VB":8,//8,//10,
-    "PP":0//2//0
+    "PTB":9,//9,//8,//5
+    "PVDA":3,//3,//8,//5
+    "ecolo":13,//16,//14,//11,
+    "GROEN!":8,//12,//15,//12,
+    "PS":20,//20,//18,//19,
+    "sp.a":9,//11,//9,//9,
+    "CDh":5,//4,//5,//8,
+    "CD&V":12,//14,//14,//19,
+    "DéFI":2,//1,//3,//3,
+    "MR":14,//13,//14,//17,
+    "Open Vld":12,//12,//12,//14,
+    "N-VA":25,//28,//23,
+    "VB":18//8,//8,//10,
    },
    sena : {
     "N-VA":12,
@@ -787,22 +786,23 @@ footer {
     "VB":2,
     "DéFI":0,
     "PTB":0,
-    "PVDA":0,
-    "PP":0
+    "PVDA":0
    },
    dePart : "MR", // le parti du sénateur germanophone (siège à décompter pour atteindre la majorité francophone)
    gagnants : { // progressions
     "ecolo":true,
-    "GROEN!":true
+    "GROEN!":true,
+    "PTB":true,
+    "PVDA":true,
+    "VB":true
    },
    perdants : { // régressions
-    "N-VA":true,
-    "PS":true
+    "N-VA":true
    },
 progrInit : {
     "N-VA":{
       require:[],
-      reject:["VB","PS","ecolo","PTB","DéFI"],
+      reject:["PS","ecolo","PTB","DéFI"],
       consti:true,
       insti:false,
       lingequi:false
@@ -890,13 +890,6 @@ progrInit : {
       consti:false,
       insti:false,
       lingequi:false
-    },
-    "PP":{
-      require:[],
-      reject:["VB"],
-      consti:false,
-      insti:false,
-      lingequi:false
     }
    },
    specCoa : {
@@ -904,7 +897,7 @@ progrInit : {
     "grande suédoise":{"CD&V":true, "N-VA":true, "Open Vld":true, "MR":true, "CDh":true},
     "suédoise ou kamikaze":{"CD&V":true, "N-VA":true, "Open Vld":true, "MR":true}
    },
-   critCordon : true,
+   critCordon : false,
    critWinners : false,
    critLosers : false,
    critBigFish : false,
@@ -1030,7 +1023,7 @@ progrInit : {
     "turquoise":    {"libéraux":true   ,"verts":true},
     "orange bleue": {"libéraux":true   ,"centristes":true},
     "centre-droit":{"libéraux":true   ,"centristes":true, "N-VA":true},
-    "bourguignonne": {"libéraux":true   ,"N-VA":true, "sp.a":true},
+    "bourguignonne": {"libéraux":true   ,"N-VA":true, "socialistes":true},
 
     "lilas ou arménienne":{"libéraux":true,"centristes":true,"PS":true},
     "orange sanguine":{"libéraux":true,"CVP":true,"CD&V N-VA":true,"CD&V":true,"PS":true}
@@ -2235,8 +2228,8 @@ progrInit : {
 <input class="btLeg" id="leg2003" type="button" value="2003" onclick="loadTab(leg2003);$('#leg2003').css('background-color','lightblue');"/>
 <input class="btLeg" id="leg2007" type="button" value="2007" onclick="loadTab(leg2007);$('#leg2007').css('background-color','lightblue');"/>
 <input class="btLeg" id="leg2010" type="button" value="2010" onclick="loadTab(leg2010);$('#leg2010').css('background-color','lightblue');"/>
-<input class="btLeg" id="leg2014" type="button" value="2014" onclick="loadTab(leg2014);$('#leg2014').css('background-color','lightblue');" style="background-color:lightblue"/>
-<input class="btLeg" id="leg2019" type="button" value="2019?" onclick="loadTab(leg2019);$('#leg2019').css('background-color','lightblue');" style="background-color:lightblue"/>
+<input class="btLeg" id="leg2014" type="button" value="2014" onclick="loadTab(leg2014);$('#leg2014').css('background-color','lightblue');"/>
+<input class="btLeg" id="leg2019" type="button" value="2019" onclick="loadTab(leg2019);$('#leg2019').css('background-color','lightblue');" style="background-color:lightblue"/>
 
 <div class="tabber" id="tabber">
 
@@ -2300,8 +2293,8 @@ progrInit : {
   
   <br><br><footer><a href="mailto:leunen.d@gmail.com">email</a> <a href="https://twitter.com/ledahulevogyre">@ledahulevogyre</a><br/>Merci à Vincent de Coorebyter pour ses précieux conseils</footer>
 <script>
-  loadTab(leg2014);
-  document.getElementById("leg2014").setAttribute("style", "background-color:lightblue");
+  loadTab(leg2019);
+  document.getElementById("leg2019").setAttribute("style", "background-color:lightblue");
 </script>
 </body>
 </html>
